[tool.poetry]
name = "impress_telegram_bot"
version = "0.1.0"
description = ""
authors = ["Rinaldo Rex <rinaldorexg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.7"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
